# __b00t__

./: .gitignore  .mcp.json  Cargo.toml  README.md  b00t_quick_reference.md  bootstrap-report.toon  install.sh  justfile
_b00t_/: argo-cli.cli.toml  argo-workflows.k8s.toml  bootstrap.toml  ccometixline.cli.toml  chrome-mcp.mcp.toml  codex-gpt5.mcp.toml  codex-mcp-tool.mcp.toml  crawl4ai-mcp.mcp.toml  crawl4ai.cli.toml  css.mcp.toml  fastmcp.cli.toml  flux-cd.k8s.toml  gemini-mcp-tool.mcp.toml  github.mcp.toml  go.cli.toml  grok-guru.mcp.toml  huggingface.ai.toml  huggingface.cli.toml  k3d.cli.toml  k8s-complete-platform.stack.toml  k8s.cli.toml  k9s.cli.toml  kapp.cli.toml  kimi-k2.ai_model.toml  kompose.cli.toml  kube-prometheus-stack.k8s.toml  kubecost.k8s.toml  kubectx.cli.toml  kueue.cli.toml  langchain.ai.toml  litellm.ai.toml  llm-batch-job.job.toml  llm-inference-pipeline.stack.toml  n8n.docker.toml  nvidia-gpu-operator.k8s.toml  openai-codex-mcp.mcp.toml  openrouter.ai.toml  phase1-devex.stack.toml  phase2-gpu-observability.stack.toml  phase3-workflows.stack.toml  (+9 more)
b00t-c0re-lib/: Cargo.toml
b00t-c0re-npm/: Cargo.toml
b00t-cli/: Cargo.toml
b00t-grok/: Cargo.toml  build.rs
b00t-ipc/: Cargo.toml
b00t-lib-chat/: Cargo.toml
b00t-mcp/: Cargo.toml
b00t-py/: Cargo.toml
k0mmand3r/: Cargo.toml
langchain-agent/: README.md  pyproject.toml
langchain-agent/src/b00t_langchain_agent/: __init__.py  agent_service.py  k0mmand3r.py  main.py  mcp_tools.py  types.py
langchain-agent/tests/: __init__.py  test_agent_service.py  test_k0mmand3r.py  test_mcp_tools.py
(+109 files in other folders)
