[project]
name = "b00t-langchain-agent"
version = "0.1.0"
description = "LangChain v1.0 agent service with MCP tools and k0mmand3r IPC"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=1.0.0",
    "redis[hiredis]>=5.0.0",  # Redis for IPC
    "pydantic>=2.0.0",
    "fastmcp>=0.2.0",  # MCP client library
    "crawl4ai>=0.7.6",  # Web crawling
    "httpx>=0.27.0",
    "typer>=0.12.0",  # CLI
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
b00t-langchain = "b00t_langchain_agent.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require real MCP servers)",
]
